--- a/ConnorOrton/connororton.html
+++ b/ConnorOrton/connororton.html
@@ -29,7 +29,7 @@
       <div class="row">
         <div class="col-md-12 pt-2" style="">
           <h3 class="text-center bg-dark p-2"><b class="">Connor Orton BSc</b><br></h3>
-          <h5 class="text-center bg-dark p-2">Games Programmer</h5>
+          <h5 class="text-center bg-dark p-2">Games/Applications Programmer</h5>
         </div>
       </div>
       <div class="row">
@@ -69,8 +69,30 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h3 class="text-center bg-secondary p-2" style=""><b>Blight of the Rose - (Upcoming) Unity, C#</b></h3>
-          <p class="text-left p-2 bg-primary">Blight of the Rose is an upcoming multi-platform 2D survival horror game developed in Unity and written in C#. It is being developed in a team of two. The game is set during an apocolpyse style event where a city is overrun by zombie-like beings. One of the main themes of the game is connectivity and the reliance on technology and this theme is featured heavily in the storyline as the player relies on their mobile phone and a modified respirator to survive and locate other survivors.<br><br><b class="">My main responsibilites are:</b><br>- Designing the various game concepts including the story and setting, gameplay systems and user interface<br>- Asset pipeline management with source control<br>- Engine asset &amp; scene implementation<br>- Writing game system, user interface and gameplay scripts<br>- Lighting and rendering management using Unity's URP<br>- Building and exporting the game<br><br>First development preview below. Disclaimer: Most assets are placeholder and are expected to be changed before project finish.</p>
+          <h3 class="text-center bg-secondary p-2" style=""><b>Once Upon A Fantasy (Upcoming) - Unity, C#</b></h3>
+          <p class="text-left p-2 bg-primary">Once Upon A Fantasy is an upcoming pixel art 2D tower defense game developed in Unity and written in C# for android devices and PC. The game features building towers that are utilized to defend against waves of enemies. The player is able to build a tower base that buffs the tower and a tower weapon that fires projectiles towards enemies, combining these elements together will create devastating combat combos to claim victory against the opposing force.<br><b class=""><br>My main responsibilites are:</b><br>- Designing the various game concepts including the story and setting, gameplay systems and user interface<br>- Asset pipeline management with source control<br>- Engine asset &amp; scene implementation<br>- Writing game system, user interface and gameplay scripts<br>- Building and exporting the game<br><br>All artwork created by Natalie Smith of Fine Chap Games.</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="row">
+            <div class="col-md-12">
+              <h3 class="text-center bg-secondary p-2"><b>Development Update Video</b></h3>
+              <div class="embed-responsive embed-responsive-16by9 pb-2">
+                <iframe src="https://www.youtube.com/embed/M25AVCYh1ko" allowfullscreen="" class="embed-responsive-item pb-2"></iframe>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="pb-4" style="">
+    <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
+      <div class="row">
+        <div class="col-md-12">
+          <h3 class="text-center bg-secondary p-2 mt-2" style=""><b>Blight of the Rose - (Upcoming) Unity, C#</b></h3>
+          <p class="text-left p-2 bg-primary">Blight of the Rose is an upcoming multi-platform 2D survival horror game developed in Unity and written in C#. It is being developed in a team of two. The game is set during an apocolpyse style event where a city is overrun by zombie-like beings. One of the main themes of the game is connectivity and the reliance on technology and this theme is featured heavily in the storyline as the player relies on their mobile phone and a modified respirator to survive and locate other survivors.<br><br><b class="">My main responsibilites are:</b><br>- Designing the various game concepts including the story and setting, gameplay systems and user interface<br>- Asset pipeline management with source control<br>- Engine asset &amp; scene implementation<br>- Writing game system, user interface and gameplay scripts<br>- Lighting and rendering management using Unity's URP<br>- Building and exporting the game<br><br>First development preview below. Disclaimer: Most assets are placeholder and are expected to be changed before project finish.&nbsp;All artwork created by Natalie Smith of Fine Chap Games.</p>
         </div>
       </div>
       <div class="row">
@@ -92,7 +114,7 @@
       <div class="row">
         <div class="col-md-12">
           <h3 class="text-center bg-secondary mt-2 p-2" style=""><b> Pixel Pinball Arcade - Unity, C# (2020)</b></h3>
-          <p class="p-2 text-left bg-primary">Pixel Pinball Arcade is an android arcade game developed in Unity written in C# and released for free on the google play store. Inspired by the popular arcade machine pinball. The game was developed in a team of two which included myself and a 2D artist. This was my second project working in a team of two.<br><br><b>My main responsibilities were:&nbsp;<br></b>- Designing the various game concepts which examples include gameplay systems and user interface&nbsp;<br>- Asset pipeline management with source control<br>- Engine asset &amp; scene implementation&nbsp;<br>- Writing game system, menu and gameplay scripts&nbsp;<br>- Audio development&nbsp;<br>- Exporting and uploading to the play store</p>
+          <p class="p-2 text-left bg-primary">Pixel Pinball Arcade is an android arcade game developed in Unity written in C# and released for free on the google play store. Inspired by the popular arcade machine pinball. The game was developed in a team of two which included myself and a 2D artist. This was my second project working in a team of two.<br><br><b>My main responsibilities were:&nbsp;<br></b>- Designing the various game concepts which examples include gameplay systems and user interface&nbsp;<br>- Asset pipeline management with source control<br>- Engine asset &amp; scene implementation&nbsp;<br>- Writing game system, menu and gameplay scripts&nbsp;<br>- Audio development&nbsp;<br>- Exporting and uploading to the play store<br><br>All artwork created by Natalie Smith of Fine Chap Games.</p>
         </div>
       </div>
       <div class="row mx-auto pb-2">
@@ -113,7 +135,7 @@
       <div class="row">
         <div class="col-md-12">
           <h3 class="text-center bg-secondary mt-2 p-2" style=""><b>RPG Mechanics Asset Pack - UE4 BP (2017)</b></h3>
-          <p class="p-2 text-left bg-primary">Battle Beasts RPG Mechanics asset pack is a collection of RPG mechanics that was developed using Unreal Engine 4 with blueprint visual scripting. It was created as part as my programming module on my BSC Games Production undergraduate degree. The game mechanics included are inspired by the Pokemon game franchise. The main mechanics and systems the asset pack includes are:<br><br>- <b>Combat system</b> (Control your beasts against your opponent, use abilities and items to defeat them, features battles against npcs and random encounters.)<br>- <b>Dialogue system</b> (Features multi choice questions and multiple outcomes depending on dialogue choice.)<br>- <b>In-Game database system</b> (For showing the player what beasts exist in the game and if they have captured them)<br>- <b>Engine System databases</b> (To manage units, unit abilities, items etc.)<br>- <b>Shop system</b> (Combined with the dialogue system to allow the player to purchase items using currency from a merchant.)<br>- <b>Bank system</b> (Combined with the dialogue system to store player beasts in a unit storage)<br>- <b>Trade system</b> (Combined with the dialogue system to trade player beasts with NPCs.)<br>-&nbsp;<b>Utility menu</b> (To allow the player to access in-game database, beast team, inventory and options for game preferences.)<br>- <b>Player unit progression</b> (Beasts level up and learn new abilities depending on their level.)</p>
+          <p class="p-2 text-left bg-primary">Battle Beasts RPG Mechanics asset pack is a collection of RPG mechanics that was developed using Unreal Engine 4 with blueprint visual scripting. It was created as part as my programming module on my BSC Games Production undergraduate degree. The game mechanics included are inspired by the Pokemon game franchise. The main mechanics and systems the asset pack includes are:<br><br>- <b>Combat system</b> (Control your beasts against your opponent, use abilities and items to defeat them, features battles against npcs and random encounters.)<br>- <b>Dialogue system</b> (Features multi choice questions and multiple outcomes depending on dialogue choice.)<br>- <b>In-Game database system</b> (For showing the player what beasts exist in the game and if they have captured them)<br>- <b>Engine System databases</b> (To manage units, unit abilities, items etc.)<br>- <b>Shop system</b> (Combined with the dialogue system to allow the player to purchase items using currency from a merchant.)<br>- <b>Bank system</b> (Combined with the dialogue system to store player beasts in a unit storage)<br>- <b>Trade system</b> (Combined with the dialogue system to trade player beasts with NPCs.)<br>-&nbsp;<b>Utility menu</b> (To allow the player to access in-game database, beast team, inventory and options for game preferences.)<br>- <b>Player unit progression</b> (Beasts level up and learn new abilities depending on their level.)<br></p>
         </div>
       </div>
       <div class="row">
@@ -285,7 +307,6 @@
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous" style=""></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous" style=""></script>
-  <pingendo onclick="window.open('https://pingendo.com/', '_blank')" style="cursor:pointer;position: fixed;bottom: 20px;right:20px;padding:4px;background-color: #00b0eb;border-radius: 8px; width:220px;display:flex;flex-direction:row;align-items:center;justify-content:center;font-size:14px;color:white">Made with Pingendo Free&nbsp;&nbsp;<img src="https://pingendo.com/site-assets/Pingendo_logo_big.png" class="d-block" alt="Pingendo logo" height="16"></pingendo>
 </body>
 
 </html>
