--- a/index.html
+++ b/index.html
@@ -79,7 +79,29 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <h3 class="bg-secondary text-center p-2">Blight of the Rose (Upcoming)</h3>
+          <h3 class="bg-secondary text-center p-2">Once Upon A Fantasy (Upcoming)</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <p class="mb-0 bg-primary py-2 px-2 text-left"> Once Upon a Fantasy is an upcoming 2D pixel art tower defense game for android devices and PC. It features defending the your kingdom against waves of enemies whilst utilizing towers made up of a tower base and weapon which when combined in combat create devastating combos. </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12 mt-2">
+          <h3 class="text-center bg-secondary p-2"><b>Development Update Video</b></h3>
+          <div class="embed-responsive embed-responsive-16by9 mb-2">
+            <iframe src="https://www.youtube.com/embed/M25AVCYh1ko" allowfullscreen="" class="embed-responsive-item"></iframe>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="mt-4">
+    <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+      <div class="row">
+        <div class="col-md-12">
+          <h3 class="bg-secondary text-center p-2 mt-2">Blight of the Rose (Upcoming)</h3>
         </div>
       </div>
       <div class="row">
