--- a/ConnorOrton/MA/CRJ - GDO710/CRJ-GDO710-Sprint3.html
+++ b/ConnorOrton/MA/CRJ - GDO710/CRJ-GDO710-Sprint3.html
@@ -24,12 +24,12 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h3 class="bg-dark text-center display-4 py-2 mt-2 mx-auto" style=""><b class="text-center">Contents Page</b></h3>
+          <h3 class="bg-dark text-center display-4 py-2 mt-2 mx-auto" style=""><b class="text-center">Table of Contents</b></h3>
         </div>
       </div>
       <div class="row px-2 pb-2">
         <div class="col-md-12 bg-primary py-2" style="">
-          <a class="btn btn-block btn-dark" href="../CRJ-Contents.html">CRJ - Contents Page<br></a><a class="btn btn-block btn-dark" href="CRJ-GDO710-Sprint1.html">Sprint 1 - (Weeks 1-3)</a><a class="btn btn-block btn-dark" href="CRJ-GDO710-Sprint2.html">Sprint 2 - (Weeks 3-6)</a><a class="btn btn-block btn-dark" href="CRJ-GDO710-Sprint4.html">Sprint 4 - (Weeks 10-13)</a>
+          <a class="btn btn-block btn-dark" href="../CRJ-Introduction.html">CRJ - Introduction<br></a><a class="btn btn-block btn-dark" href="CRJ-GDO710-Sprint1.html">Sprint 1 - Orientation - (Weeks 1-3)</a><a class="btn btn-block btn-dark" href="CRJ-GDO710-Sprint2.html">Sprint 2 - Rapid Ideation 1 - (Weeks 3-6)</a><a class="btn btn-block btn-dark" href="CRJ-GDO710-Sprint4.html">Sprint 4 - Finalise - (Weeks 10-13)</a>
         </div>
       </div>
     </div>
