--- a/ConnorOrton/MA/CRJ-Introduction.html
+++ b/ConnorOrton/MA/CRJ-Introduction.html
@@ -54,13 +54,13 @@
         </div>
       </div>
       <div class="row px-2 pb-2">
-        <div class="col-md-12 bg-primary py-2" style="">
+        <div class="col-md-12 py-2" style="">
           <h3 class="text-center bg-secondary p-2">GDO710 - Development Practice</h3>
-          <p class="text-left p-2 mx-2 mb-0 bg-primary">This first module is GDO710 Development Practice which is based around practice and reflection where I will be graded by this critical reflective journal and a case study video at the end of the module. The posts I will write will document my prior and current notions of development practice and will show the research, reflection and deliberate practices I have endeavoured. By the end of this module I will have gained the confidence and clarity to state clearly my aspirations after graduating from the course, what skills I need to improve on in order to achieve these aspirations and what medium I need to create to evidence my skillset.&nbsp;</p><a class="btn btn-block btn-dark" href="CRJ - GDO710/CRJ-GDO710-Sprint1.html">Sprint 1 - (Weeks 1-3)<br></a><a class="btn btn-block btn-dark" href="CRJ - GDO710/CRJ-GDO710-Sprint2.html">Sprint 2 - (Weeks 4-6)</a><a class="btn btn-block btn-dark" href="CRJ - GDO710/CRJ-GDO710-Sprint3.html">Sprint 3 - (Weeks 7-10)</a><a class="btn btn-block btn-dark" href="CRJ - GDO710/CRJ-GDO710-Sprint4.html">Sprint 4 - (Weeks 10-13)</a>
+          <p class="text-left p-2 bg-primary mb-2">This first module is GDO710 Development Practice which is based around practice and reflection where I will be graded by this critical reflective journal and a case study video at the end of the module. The posts I will write will document my prior and current notions of development practice and will show the research, reflection and deliberate practices I have endeavoured. By the end of this module I will have gained the confidence and clarity to state clearly my aspirations after graduating from the course, what skills I need to improve on in order to achieve these aspirations and what medium I need to create to evidence my skillset.&nbsp;</p><a class="btn btn-block btn-dark" href="CRJ - GDO710/CRJ-GDO710-Sprint1.html">Sprint 1 - Orientation - (Weeks 1-3)<br></a><a class="btn btn-block btn-dark" href="CRJ - GDO710/CRJ-GDO710-Sprint2.html">Sprint 2 - Rapid Ideation 1 - (Weeks 4-6)</a><a class="btn btn-block btn-dark" href="CRJ - GDO710/CRJ-GDO710-Sprint3.html">Sprint 3 - Rapid Ideation 2 - (Weeks 7-10)</a><a class="btn btn-block btn-dark" href="CRJ - GDO710/CRJ-GDO710-Sprint4.html">Sprint 4 - Finalise - (Weeks 10-13)</a>
         </div>
       </div>
       <div class="row px-2 pb-2">
-        <div class="col-md-12 bg-primary py-2">
+        <div class="col-md-12 py-2">
           <h3 class="text-center p-1 bg-secondary" contenteditable="true">IGO720 - Game Development</h3>
           <div class="row">
             <div class="col-md-12">
@@ -70,7 +70,7 @@
         </div>
       </div>
       <div class="row px-2 pb-2">
-        <div class="col-md-12 bg-primary py-2">
+        <div class="col-md-12 py-2">
           <h3 class="text-center bg-secondary p-2">GDO730 - Co-Creative Design &amp; Development Practice</h3>
           <div class="row">
             <div class="col-md-12">
@@ -80,7 +80,7 @@
         </div>
       </div>
       <div class="row px-2 pb-2">
-        <div class="col-md-12 bg-primary py-2">
+        <div class="col-md-12 py-2">
           <h3 class="text-center bg-secondary p-2">IGO740 - Indie Game Start-Up</h3>
           <div class="row">
             <div class="col-md-12">
@@ -90,7 +90,7 @@
         </div>
       </div>
       <div class="row px-2 pb-2">
-        <div class="col-md-12 bg-primary py-2">
+        <div class="col-md-12 py-2">
           <h3 class="text-center bg-secondary p-2">GO750 - Major Project</h3>
           <div class="row">
             <div class="col-md-12">
