--- a/ConnorOrton/MA/CRJ - GDO710/CRJ-GDO710-Sprint1.html
+++ b/ConnorOrton/MA/CRJ - GDO710/CRJ-GDO710-Sprint1.html
@@ -129,7 +129,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12"><img class="d-block img-fluid mx-auto my-2 h-50" src="Week 1/Talis Reading List.PNG"></div>
+        <div class="col-md-12"><img class="d-block img-fluid mx-auto my-2 w-75" src="Week 1/Talis Reading List.PNG"></div>
       </div>
       <div class="row">
         <div class="col-md-12">
@@ -155,7 +155,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12"><img class="d-block img-fluid h-25 mx-auto my-2" src="../../Portrait/Connor_Orton.jpg"></div>
+        <div class="col-md-12"><img class="d-block img-fluid mx-auto my-2 w-25" src="../../Portrait/Connor_Orton.jpg"></div>
       </div>
       <div class="row">
         <div class="col-md-12">
@@ -168,7 +168,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12"><img class="d-block img-fluid h-50 mx-auto my-2" src="Week 1/FCG Games.png"></div>
+        <div class="col-md-12"><img class="d-block img-fluid mx-auto my-2 w-50" src="Week 1/FCG Games.png"></div>
       </div>
       <div class="row">
         <div class="col-md-12">
@@ -194,7 +194,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12"><img class="d-block img-fluid h-50 my-2 mx-auto" src="Week 1/Avatar.jpeg"></div>
+        <div class="col-md-12"><img class="d-block img-fluid my-2 mx-auto w-50" src="Week 1/Avatar.jpeg"></div>
       </div>
       <div class="row">
         <div class="col-md-12">
@@ -207,7 +207,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12"><img class="d-block img-fluid h-50 mx-auto my-2" src="Week 1/Sketch.jpeg"></div>
+        <div class="col-md-12"><img class="d-block img-fluid mx-auto my-2 w-75" src="Week 1/Sketch.jpeg"></div>
       </div>
       <div class="row">
         <div class="col-md-12">
@@ -536,7 +536,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12"><img class="d-block img-fluid mx-auto my-2 h-50" src="Week 3/Week 3 - Ideation Tip.jpeg"></div>
+        <div class="col-md-12"><img class="d-block img-fluid mx-auto my-2 w-50" src="Week 3/Week 3 - Ideation Tip.jpeg"></div>
       </div>
       <div class="row">
         <div class="col-md-12">
@@ -562,7 +562,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12"><img class="d-block img-fluid mx-auto my-2 h-50" src="Week 3/Week 3 - Placeholder_StickMan_spritesheet.png"></div>
+        <div class="col-md-12"><img class="d-block img-fluid mx-auto my-2 w-50" src="Week 3/Week 3 - Placeholder_StickMan_spritesheet.png"></div>
       </div>
       <div class="row">
         <div class="col-md-12">
@@ -598,7 +598,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12"><img class="d-block img-fluid mx-auto my-2 h-50" src="Week 3/Week 3 - Pirate Jam.PNG"></div>
+        <div class="col-md-12"><img class="d-block img-fluid mx-auto my-2 w-50" src="Week 3/Week 3 - Pirate Jam.PNG"></div>
       </div>
       <div class="row">
         <div class="col-md-12">
@@ -639,8 +639,8 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6"><img class="d-block img-fluid mx-auto my-2" src="Week 3/Dash and Stack Menu Old.PNG"></div>
-        <div class="col-md-6"><img class="d-block img-fluid mx-auto my-2" src="Week 3/Dash and Stack Old.PNG"></div>
+        <div class="col-md-6"><img class="d-block img-fluid mx-auto my-2 w-75" src="Week 3/Dash and Stack Menu Old.PNG"></div>
+        <div class="col-md-6"><img class="d-block img-fluid mx-auto my-2 w-75" src="Week 3/Dash and Stack Old.PNG"></div>
       </div>
       <div class="row">
         <div class="col-md-12">
@@ -663,7 +663,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12"><img class="d-block img-fluid mx-auto my-2 h-75" src="Week 3/Prototype/Dash_Storyboard.png"></div>
+        <div class="col-md-12"><img class="d-block img-fluid mx-auto my-2 w-50" src="Week 3/Prototype/Dash_Storyboard.png"></div>
       </div>
       <div class="row">
         <div class="col-md-12">
@@ -686,8 +686,8 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6"><img class="d-block img-fluid mx-auto my-2 h-50" src="Week 3/Prototype/menu.PNG"></div>
-        <div class="col-md-6"><img class="d-block img-fluid mx-auto my-2 h-50" src="Week 3/Prototype/Game Board.PNG"></div>
+        <div class="col-md-6"><img class="d-block img-fluid mx-auto my-2 w-50" src="Week 3/Prototype/menu.PNG"></div>
+        <div class="col-md-6"><img class="d-block img-fluid mx-auto my-2 w-50" src="Week 3/Prototype/Game Board.PNG"></div>
       </div>
       <div class="row">
         <div class="col-md-12">
