--- a/ConnorOrton/MA/CRJ-Introduction.html
+++ b/ConnorOrton/MA/CRJ-Introduction.html
@@ -23,8 +23,8 @@
     <div class="container pb-2" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12 pt-2" style="">
-          <h3 class="text-center bg-dark p-2">Critical Reflective Journal</h3>
-          <h5 class="text-center bg-dark p-2">Introduction</h5>
+          <h2 class="text-center bg-dark p-2 mb-2">Critical Reflective Journal</h2>
+          <h3 class="text-center bg-dark p-2 mt-2 mb-0">Introduction</h3>
         </div>
       </div>
       <div class="row">
@@ -37,7 +37,7 @@
           <div class="row px-2">
           </div>
           <div class="col-md-12 pt-2">
-            <h5 class="text-center bg-dark p-2">Blog Structure</h5>
+            <h3 class="text-center bg-dark p-2 mt-2 mb-0">Blog Structure</h3>
           </div>
         </div>
       </div>
@@ -50,51 +50,51 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h3 class="bg-dark text-center display-4 py-2 mt-2 mx-auto" style=""><b class="text-center">Contents Page</b></h3>
+          <h2 class="text-center bg-dark p-2 mt-2 mb-0" style=""><b class="text-center">Contents Page</b></h2>
         </div>
       </div>
-      <div class="row px-2 pb-2">
+      <div class="row pb-2">
         <div class="col-md-12 py-2" style="">
-          <h3 class="text-center bg-secondary p-2">GDO710 - Development Practice</h3>
-          <p class="text-left p-2 bg-primary mb-2">This first module is GDO710 Development Practice which is based around practice and reflection where I will be graded by this critical reflective journal and a case study video at the end of the module. The posts I will write will document my prior and current notions of development practice and will show the research, reflection and deliberate practices I have endeavoured. By the end of this module I will have gained the confidence and clarity to state clearly my aspirations after graduating from the course, what skills I need to improve on in order to achieve these aspirations and what medium I need to create to evidence my skillset.&nbsp;</p><a class="btn btn-block btn-dark" href="CRJ - GDO710/CRJ-GDO710-Sprint1.html">Sprint 1 - Orientation - (Weeks 1-3)<br></a><a class="btn btn-block btn-dark" href="CRJ - GDO710/CRJ-GDO710-Sprint2.html">Sprint 2 - Rapid Ideation 1 - (Weeks 4-6)</a><a class="btn btn-block btn-dark" href="CRJ - GDO710/CRJ-GDO710-Sprint3.html">Sprint 3 - Rapid Ideation 2 - (Weeks 7-10)</a><a class="btn btn-block btn-dark" href="CRJ - GDO710/CRJ-GDO710-Sprint4.html">Sprint 4 - Finalise - (Weeks 10-13)</a>
+          <h3 class="text-center p-2 mb-0 bg-dark">GDO710 - Development Practice</h3>
+          <p class="text-left p-2 bg-primary mb-2" style="">This first module is GDO710 Development Practice which is based around practice and reflection where I will be graded by this critical reflective journal and a case study video at the end of the module. The posts I will write will document my prior and current notions of development practice and will show the research, reflection and deliberate practices I have endeavoured. By the end of this module I will have gained the confidence and clarity to state clearly my aspirations after graduating from the course, what skills I need to improve on in order to achieve these aspirations and what medium I need to create to evidence my skillset.&nbsp;</p><a class="btn btn-block btn-dark" href="CRJ - GDO710/CRJ-GDO710-Sprint1.html">Sprint 1 - Orientation - (Weeks 1-3)<br></a><a class="btn btn-block btn-dark" href="CRJ - GDO710/CRJ-GDO710-Sprint2.html">Sprint 2 - Rapid Ideation 1 - (Weeks 4-6)</a><a class="btn btn-block btn-dark" href="CRJ - GDO710/CRJ-GDO710-Sprint3.html">Sprint 3 - Rapid Ideation 2 - (Weeks 7-10)</a><a class="btn btn-block btn-dark" href="CRJ - GDO710/CRJ-GDO710-Sprint4.html">Sprint 4 - Finalise - (Weeks 10-13)</a>
         </div>
       </div>
-      <div class="row px-2 pb-2">
+      <div class="row pb-2">
         <div class="col-md-12 py-2">
-          <h3 class="text-center p-1 bg-secondary" contenteditable="true">IGO720 - Game Development</h3>
+          <h3 class="text-center p-1 mb-0 bg-dark" contenteditable="true">IGO720 - Game Development</h3>
           <div class="row">
             <div class="col-md-12">
-              <p class="text-left p-2 bg-secondary mb-0">TBC</p>
+              <p class="text-left p-2 mb-0 bg-primary">TBC</p>
             </div>
           </div>
         </div>
       </div>
-      <div class="row px-2 pb-2">
+      <div class="row pb-2">
         <div class="col-md-12 py-2">
-          <h3 class="text-center bg-secondary p-2">GDO730 - Co-Creative Design &amp; Development Practice</h3>
+          <h3 class="text-center p-1 mb-0 bg-dark">GDO730 - Co-Creative Design &amp; Development Practice</h3>
           <div class="row">
             <div class="col-md-12">
-              <p class="text-left p-2 bg-secondary mb-0">TBC</p>
+              <p class="text-left p-2 mb-0 bg-primary">TBC</p>
             </div>
           </div>
         </div>
       </div>
-      <div class="row px-2 pb-2">
+      <div class="row pb-2">
         <div class="col-md-12 py-2">
-          <h3 class="text-center bg-secondary p-2">IGO740 - Indie Game Start-Up</h3>
+          <h3 class="text-center p-1 mb-0 bg-dark">IGO740 - Indie Game Start-Up</h3>
           <div class="row">
             <div class="col-md-12">
-              <p class="text-left p-2 bg-secondary mb-0">TBC</p>
+              <p class="text-left p-2 mb-0 bg-primary">TBC</p>
             </div>
           </div>
         </div>
       </div>
-      <div class="row px-2 pb-2">
+      <div class="row pb-2">
         <div class="col-md-12 py-2">
-          <h3 class="text-center bg-secondary p-2">GO750 - Major Project</h3>
+          <h3 class="text-center p-1 mb-0 bg-dark">GO750 - Major Project</h3>
           <div class="row">
             <div class="col-md-12">
-              <p class="text-left p-2 bg-secondary mb-0">TBC</p>
+              <p class="text-left p-2 mb-0 bg-primary">TBC</p>
             </div>
           </div>
         </div>
