--- a/ConnorOrton/MA/CRJ - GDO710/CRJ-GDO710-Sprint1.html
+++ b/ConnorOrton/MA/CRJ - GDO710/CRJ-GDO710-Sprint1.html
@@ -43,12 +43,12 @@
       </div>
       <div class="row">
         <div class="col-md-12" style="">
-          <h3 class="text-center bg-dark p-2 my-2" id="week1">Week 1 - Orientation</h3>
+          <h3 class="text-center bg-dark p-2 mt-2 mb-0" id="week1">Week 1 - Orientation</h3>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12" style="">
-          <h4 class="text-center p-2 bg-secondary mb-0 mt-2" id="week1"><b>Introduction</b></h4>
+          <h4 class="text-center p-2 bg-secondary mt-0 mb-0" id="week1"><b>Introduction</b></h4>
         </div>
       </div>
       <div class="row">
@@ -275,12 +275,12 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12" style="">
-          <h3 class="text-center bg-dark p-2 my-2" id="week1">Week 2 - Creativity</h3>
+          <h3 class="text-center bg-dark p-2 mt-2 mb-0" id="week1">Week 2 - Creativity</h3>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12" style="">
-          <h4 class="text-center p-2 bg-secondary mb-0 mt-2" id="week1">Introduction</h4>
+          <h4 class="text-center p-2 bg-secondary mb-0" id="week1">Introduction</h4>
         </div>
       </div>
       <div class="row">
@@ -565,12 +565,12 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12" style="">
-          <h3 class="text-center bg-dark p-2 my-2" id="week1">Week 3 - Rapid Ideation</h3>
+          <h3 class="text-center bg-dark p-2 mt-2 mb-0" id="week1">Week 3 - Rapid Ideation</h3>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12" style="">
-          <h4 class="text-center p-2 bg-secondary mb-0 mt-2" id="week1">Introduction</h4>
+          <h4 class="text-center p-2 bg-secondary mb-0" id="week1">Introduction</h4>
         </div>
       </div>
       <div class="row">
