--- a/ConnorOrton/MA/CRJ - GDO710/CRJ-GDO710-Sprint2.html
+++ b/ConnorOrton/MA/CRJ - GDO710/CRJ-GDO710-Sprint2.html
@@ -43,12 +43,12 @@
       </div>
       <div class="row">
         <div class="col-md-12" style="">
-          <h3 class="text-center bg-dark p-2 my-2" id="week1">Week 4 - Time and Project Management</h3>
+          <h3 class="text-center bg-dark p-2 mt-2 mb-0" id="week1">Week 4 - Time and Project Management</h3>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12" style="">
-          <h4 class="text-center p-2 bg-secondary mb-0 mt-2" id="week1"><b>Introduction</b></h4>
+          <h4 class="text-center p-2 bg-secondary mt-0 mb-0" id="week1"><b>Introduction</b></h4>
         </div>
       </div>
       <div class="row">
