--- a/ConnorOrton/MA/CRJ - GDO710/CRJ-GDO710-Sprint1.html
+++ b/ConnorOrton/MA/CRJ - GDO710/CRJ-GDO710-Sprint1.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-  <title>CRJ - GDO710</title>
+  <title>CRJ - GDO710 - Sprint 1</title>
   <meta name="description" content="Critical reflective journal GDO710 page.">
   <meta name="keywords" content="Connor Orton Indie Game Development Portfolio">
   <link rel="stylesheet" href="wireframe.css">
@@ -29,7 +29,7 @@
       </div>
       <div class="row px-2 pb-2">
         <div class="col-md-12 bg-primary py-2" style="">
-          <a class="btn btn-block btn-dark" href="../CRJ-Introduction.html">CRJ - Introduction<br></a><a class="btn btn-block btn-dark" href="CRJ-GDO710-Sprint2.html">Sprint 2 - Rapid Ideation 1 - (Weeks 4-6)</a><a class="btn btn-block btn-dark" href="CRJ-GDO710-Sprint3.html">Sprint 3 - Rapid Ideation 2 - (Weeks 7-10)</a><a class="btn btn-block btn-dark" href="CRJ-GDO710-Sprint4.html">Sprint 4 - Finalise - (Weeks 10-13)</a>
+          <a class="btn btn-block btn-dark" href="../CRJ-Introduction.html">CRJ: Introduction<br></a><a class="btn btn-block btn-dark" href="CRJ-GDO710-Sprint2.html">Sprint 2: Rapid Ideation 1 - (Weeks 4-6)</a><a class="btn btn-block btn-dark" href="CRJ-GDO710-Sprint3.html">Sprint 3: Rapid Ideation 2 - (Weeks 7-10)</a><a class="btn btn-block btn-dark" href="CRJ-GDO710-Sprint4.html">Sprint 4: Finalise - (Weeks 10-13)</a>
         </div>
       </div>
     </div>
@@ -38,12 +38,12 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12" style="">
-          <h2 class="text-center bg-dark p-2 my-2">Sprint 1 - Orientation</h2>
+          <h2 class="text-center bg-dark p-2 my-2">Sprint 1: Orientation</h2>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12" style="">
-          <h3 class="text-center bg-dark p-2 mt-2 mb-0" id="week1">Week 1 - Orientation</h3>
+          <h3 class="text-center bg-dark p-2 mt-2 mb-0" id="week1">Week 1: Orientation</h3>
         </div>
       </div>
       <div class="row">
@@ -183,7 +183,7 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <p class="p-2 bg-info text-left mb-2">Connor Orton BSc.</p>
+          <p class="p-2 bg-info text-left mb-2"><b>Connor Orton BSc.</b></p>
         </div>
       </div>
       <div class="row">
@@ -275,7 +275,7 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12" style="">
-          <h3 class="text-center bg-dark p-2 mt-2 mb-0" id="week1">Week 2 - Creativity</h3>
+          <h3 class="text-center bg-dark p-2 mt-2 mb-0" id="week1">Week 2: Creativity</h3>
         </div>
       </div>
       <div class="row">
@@ -565,7 +565,7 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12" style="">
-          <h3 class="text-center bg-dark p-2 mt-2 mb-0" id="week1">Week 3 - Rapid Ideation</h3>
+          <h3 class="text-center bg-dark p-2 mt-2 mb-0" id="week1">Week 3: Rapid Ideation</h3>
         </div>
       </div>
       <div class="row">
