--- a/ConnorOrton/MA/CRJ-Introduction.html
+++ b/ConnorOrton/MA/CRJ-Introduction.html
@@ -42,7 +42,7 @@
         </div>
       </div>
       <div class="row px-2">
-        <div class="col-md-12 bg-light" style=""><img class="d-block mx-auto img-fluid" src="CRJ - GDO710/Intro/CRJ_Diagram.png" style=""></div>
+        <div class="col-md-12 bg-light" style=""><img class="d-block img-fluid img-fluid mx-auto my-2" src="CRJ - GDO710/Intro/CRJ_Diagram.png" style=""></div>
       </div>
     </div>
   </div>
