--- a/ConnorOrton/MA/CRJ - GDO710/CRJ-GDO710-Sprint2.html
+++ b/ConnorOrton/MA/CRJ - GDO710/CRJ-GDO710-Sprint2.html
@@ -587,7 +587,7 @@
           </div>
           <div class="row">
             <div class="col-md-12">
-              <p class="p-2 bg-info text-left mb-2"><b>Mind map that I created to help generate ideas for my first rapid ideation project.&nbsp;</b></p>
+              <p class="p-2 bg-info text-left mb-2"><b>The tally results of my posts analysis using reflective domains.</b></p>
             </div>
           </div>
         </div>
