--- a/ConnorOrton/MA/CRJ - GDO710/CRJ-GDO710-Sprint4.html
+++ b/ConnorOrton/MA/CRJ - GDO710/CRJ-GDO710-Sprint4.html
@@ -571,7 +571,32 @@
       </div>
       <div class="row">
         <div class="col-md-12">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
           <p class="text-left bg-primary p-2 mb-2"><b>Falmouth University (2021) Topic: Week 12: Challenge Activity. Available at: https://learn.falmouth.ac.uk/courses/240/discussion_topics/2977?module_item_id=9227.&nbsp;<br><br>Falmouth University (2021) Topic: Week 12: Spark Forum. Available at: https://learn.falmouth.ac.uk/courses/240/discussion_topics/2978?module_item_id=9222.&nbsp;<br><br>Falmouth University (2021) Week 12: Introduction - Finale: GDO710 Development Practice S1 (21/22). Available at: https://learn.falmouth.ac.uk/courses/240/pages/week-12-introduction-finale?module_item_id=9221.&nbsp;&nbsp;</b></p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <h4 class="text-center p-2 bg-secondary mb-0 mt-2">Case Study Video</h4>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="embed-responsive embed-responsive-16by9">
+                <iframe src="https://www.youtube.com/embed/XW0oP2olDq8" allowfullscreen="" class="embed-responsive-item"></iframe>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12">
+              <p class="p-2 bg-info text-left mb-2" contenteditable="true"><b>My final case study video for GDO710 Development Practice.</b></p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
