--- a/ConnorOrton/MA/CRJ - GDO710/CRJ-GDO710-Sprint4.html
+++ b/ConnorOrton/MA/CRJ - GDO710/CRJ-GDO710-Sprint4.html
@@ -29,7 +29,7 @@
       </div>
       <div class="row px-2 pb-2">
         <div class="col-md-12 bg-primary py-2" style="">
-          <a class="btn btn-block btn-dark" href="../CRJ-Introduction.html">CRJ - Introduction<br></a><a class="btn btn-block btn-dark" href="CRJ-GDO710-Sprint1.html">Sprint 1: Orientation - (Weeks 1-3)</a><a class="btn btn-block btn-dark" href="CRJ-GDO710-Sprint2.html">Sprint 2: Rapid Ideation 1 - (Weeks 4- 7)</a><a class="btn btn-block btn-dark" href="CRJ-GDO710-Sprint3.html">Sprint 3: Finalise - (Weeks 7-10)</a>
+          <a class="btn btn-block btn-dark" href="../CRJ-Introduction.html">CRJ - Introduction<br></a><a class="btn btn-block btn-dark" href="CRJ-GDO710-Sprint1.html">Sprint 1: Orientation - (Weeks 1-3)</a><a class="btn btn-block btn-dark" href="CRJ-GDO710-Sprint2.html">Sprint 2: Rapid Ideation 1 - (Weeks 4- 7)</a><a class="btn btn-block btn-dark" href="CRJ-GDO710-Sprint3.html">Sprint 3: Rapid Ideation 2 - (Weeks 7-10)</a>
         </div>
       </div>
     </div>
