--- a/ConnorOrton/MA/CRJ - GDO710/CRJ-GDO710-Sprint4.html
+++ b/ConnorOrton/MA/CRJ - GDO710/CRJ-GDO710-Sprint4.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="../../../wireframe.css">
 </head>
 
-<body style="	background-image: url(../../../assets/FineChapGames/FCG_Wallpaper.jpg);	background-position: top left;	background-size: 100%;	background-repeat: repeat;" class="mx-0">
+<body style="	background-image: url(../../../assets/FineChapGames/FCG_Wallpaper.jpg);	background-position: top left;	background-size: 100%;	background-repeat: repeat;" class="">
   <nav class="navbar navbar-dark bg-dark p-0">
     <div class="container d-flex justify-content-center"> <a class="navbar-brand" href="index.html">
         <img src="../../../assets/FineChapGames/Logo_ZoomedOut_NoBG.png" width="55" height="55" class="d-inline-block align-top" alt=""><b class="d-inline-flex p-1 text-primary"> Fine Chap Games</b>
