--- a/ConnorOrton/MA/CRJ - GDO710/CRJ-GDO710-Sprint4.html
+++ b/ConnorOrton/MA/CRJ - GDO710/CRJ-GDO710-Sprint4.html
@@ -29,7 +29,7 @@
       </div>
       <div class="row px-2 pb-2">
         <div class="col-md-12 bg-primary py-2" style="">
-          <a class="btn btn-block btn-dark" href="../CRJ-Introduction.html">CRJ - Introduction<br></a><a class="btn btn-block btn-dark" href="CRJ-GDO710-Sprint1.html">Sprint 1: Orientation - (Weeks 1-3)</a><a class="btn btn-block btn-dark" href="CRJ-GDO710-Sprint2.html">Sprint 2: Rapid Ideation 1 - (Weeks 4- 7)</a><a class="btn btn-block btn-dark" href="CRJ-GDO710-Sprint3.html">Sprint 3: Rapid Ideation 2 - (Weeks 7-10)</a>
+          <a class="btn btn-block btn-dark" href="../CRJ-Introduction.html">CRJ - Introduction<br></a><a class="btn btn-block btn-dark" href="CRJ-GDO710-Sprint1.html">Sprint 1: Orientation - (Weeks 1-3)</a><a class="btn btn-block btn-dark" href="CRJ-GDO710-Sprint2.html">Sprint 2: Rapid Ideation 1 - (Weeks 4-7)</a><a class="btn btn-block btn-dark" href="CRJ-GDO710-Sprint3.html">Sprint 3: Rapid Ideation 2 - (Weeks 7-10)</a>
         </div>
       </div>
     </div>
@@ -118,7 +118,7 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <p class="text-left p-2 bg-primary mb-2"><b>The envisioning process is a lightweight, iterative design activity that combines user design with technology exploration to result in a vision for the product and a planned roadmap. It will ensure product delivery to the target market through collaboration with end-users and it is a practical way of delivering customer-driven design within an Agile process (Talbott, 2010). The purpose behind using the envisioning process is to produce 3 elements of data which include keeping the vision towards the product, adequate information to know about the features, product conclusion and the stakeholders and finally to estimate the cost of the product (KnowledgeHut, 2021).&nbsp;</b></p>
+          <p class="text-left p-2 bg-primary mb-2"><b>I learned that the envisioning process is a lightweight, iterative design activity that combines user design with technology exploration to result in a vision for the product and a planned roadmap. It will ensure product delivery to the target market through collaboration with end-users and it is a practical way of delivering customer-driven design within an Agile process (Talbott, 2010). The purpose behind using the envisioning process is to produce 3 elements of data which include keeping the vision towards the product, adequate information to know about the features, product conclusion and the stakeholders and finally to estimate the cost of the product (KnowledgeHut, 2021). For my own practice as a game developer, I must utilize this process for my own game projects to better understand what I want to develop going forward and to understand my target audience.</b></p>
         </div>
       </div>
       <div class="row">
@@ -260,7 +260,7 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <p class="text-left p-2 bg-primary mb-2"><b>Personal branding is the practice of marketing individuals and their careers as a brand. It is the process of developing and upholding a reputation as an individual or company and how they go about promoting themselves. A brand will showcase unique a combination of skills, experience and personality that followers will see and how the brand’s story is told (Henderson, 2019).<br><br>Companies in the video games industry takes branding and marketing very seriously and must consider a few elements. Firstly, logo design is important as it has to be memorable, striking and representative of what the company stands for. Secondly, a company must have a good slogan and tag line which must be short and memorable. Finally, customer personas must be created using a combination of demographic and psychographic information to allow for a clear picture of the target audience to use in marketing (TheLogoCompany, 2021).</b></p>
+          <p class="text-left p-2 bg-primary mb-2"><b>This week’s research has taught me about personal branding and I understand that it is the practice of marketing individuals and their careers as a public brand. It is the process of developing and upholding a reputation as an individual or company and how they go about promoting themselves. A brand will showcase unique a combination of skills, experience and personality that followers will see and how the brand’s story is told (Henderson, 2019).&nbsp;<br><br>Further research has given me the insight that companies in the video games industry takes branding and marketing very seriously and must consider a few elements. Firstly, logo design is important as it has to be memorable, striking and representative of what the company stands for. Secondly, a company must have a good slogan and tag line which must be short and memorable. Finally, customer personas must be created using a combination of demographic and psychographic information to allow for a clear picture of the target audience to use in marketing (TheLogoCompany, 2021).</b></p>
         </div>
       </div>
       <div class="row">
