--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <h5 class="text-center bg-dark p-2">Games Programmer</h5>
                   </div>
                 </div>
-                <p class="mb-0 bg-primary px-2 py-2 text-left" style="">Connor is a games programmer. He has been passionate about games production since an early age who started out using RPG Maker XP to create 2D RPG games. His responsibilities include designing and writing game concept and systems, overseeing the project pipeline and asset implementation in the game engine. He is currently studying a masters degree at Falmouth University whilst seeking employment.<br></p><a class="btn my-2 btn-block btn-dark p-2" href="ConnorOrton/connororton.html" style="">Portfolio &amp; CV</a>
+                <p class="mb-0 bg-primary px-2 py-2 text-left" style="">Connor is a games programmer. He has been passionate about games production since an early age who started out using RPG Maker XP to create 2D RPG games. His responsibilities include designing and writing game concept and systems, overseeing the project pipeline and asset implementation in the game engine. He is currently studying a masters degree at Falmouth University whilst seeking employment.<br></p><a class="btn my-2 btn-block btn-dark p-2" href="connororton.html" style="">Portfolio &amp; CV</a>
               </div>
               <div class="col-12 col-lg-6 pr-0" style="">
                 <img class="img-fluid d-block border border-dark mx-auto" alt="Card image cap" src="NatalieSmith/Portrait/Natalie_Smith.jpg" width="350">
