--- a/ConnorOrton/index.html
+++ b/ConnorOrton/index.html
@@ -13,16 +13,16 @@
   <link rel="stylesheet" href="../wireframe.css">
 </head>
 
-<body style="	background-image: url(assets/FineChapGames/FCG_Wallpaper.jpg);	background-position: top left;	background-size: 100%;	background-repeat: repeat;" class="mx-0">
+<body style="	background-image: url(../assets/FineChapGames/FCG_Wallpaper.jpg);	background-position: top left;	background-size: 100%;	background-repeat: repeat;" class="mx-0">
   <nav class="navbar navbar-dark bg-dark p-0">
     <div class="container d-flex justify-content-center"> <a class="navbar-brand" href="index.html">
-        <img src="assets/FineChapGames/Logo_ZoomedOut_NoBG.png" width="55" height="55" class="d-inline-block align-top" alt=""><b class="d-inline-flex p-1 text-primary"> Fine Chap Games</b>
+        <img src="../assets/FineChapGames/Logo_ZoomedOut_NoBG.png" width="55" height="55" class="d-inline-block align-top" alt=""><b class="d-inline-flex p-1 text-primary"> Fine Chap Games</b>
       </a> </div>
   </nav>
   <div class="mb-4" style="">
     <div class="container pb-2" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
-        <div class="col-md-12"><img class="d-block img-fluid d-flex justify-content-center border-dark border mx-auto mt-2" src="ConnorOrton/Portrait/Connor_Orton.jpg" height="300" width="300
+        <div class="col-md-12"><img class="d-block img-fluid d-flex justify-content-center border-dark border mx-auto mt-2" src="Portrait/Connor_Orton.jpg" height="300" width="300
 400
 50"></div>
       </div>
